qa/account/templates/base.html     Добавление переменной для указания заколовка страницы
qa/account/views.py
    Добавление ключа "title" в контекст в представлениях signin и signup

qa/core/forms.py
    Изменение порядка тем. Теперь тема с названием "Все" располагается в
    самом начале списка

--- a/qa/account/templates/account/signin.html
+++ b/qa/account/templates/account/signin.html
@@ -4,12 +4,12 @@
     {% csrf_token %}
     {% for field in form %}
         {{ field }}
+        {% if field.errors %}
+            {% for err in field.errors %}
+                <p class="container-fluid text-center text-danger mb-2"> {{ err }} </p> 
+            {% endfor %}
+        {% endif %}
     {% endfor %}
-    {% if signup_form.errors %}
-        {% for elmt in signup_form %}
-            <span class="container-fluid text-danger"> {{ elmt.errors }} </span> 
-        {% endfor %}
-    {% endif %}
     <button class="btn btn-primary w-75 mb-3" type="submit">Войти</button>
     <a href="{% url 'account:signup' %}" class="text-center">Зарегистрироваться</a>
 {% endblock form %}
